# docs/swagger.json
@@ -730,10 +730,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "type": "array",
-                                "items": {
-                                    "$ref": "#/definitions/domain.ListRoomResponse"
-                                }
+                                "$ref": "#/definitions/domain.ListRoomResponse"
                             }
                         }
                     },
@@ -1394,7 +1391,7 @@
                 "start_date": {
                     "type": "string"
                 },
-                "tags": {
+                "status_tag": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/repository.StatusTag"
